--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.application.name=NOTION_GA_PROXY
 
 ## Google Analytics
-google-analytics.tracking-id=${GA_TRACKING_ID}
+google-analytics.tracking-id=${GA_TRACKING_ID: }
